# backup_file_to_baidu_netdisk

./: README.md  pyproject.toml
src/backup_file_to_baidu_netdisk/: generate_subs.py  main.py
src/backup_file_to_baidu_netdisk/config/: __init__.py  _config.py
src/backup_file_to_baidu_netdisk/controller/: __init__.py  main.py  service_manager.py
src/backup_file_to_baidu_netdisk/dao/: baidu_netdis_pcs.py  models.py  type_.py
src/backup_file_to_baidu_netdisk/domain/: __init__.py  error.py  ports.py
src/backup_file_to_baidu_netdisk/service/: __init__.py  backup_service.py  config_service.py  scan_service.py  service_machine.py  service_register.py
src/backup_file_to_baidu_netdisk/utils/: __init__.py  type_.py  wrap.py
src/backup_file_to_baidu_netdisk/utils/service_type_hint/: __init__.py  generate.py  service_type_hint.py  service_type_hint.pyi
src/backup_file_tobaidu_netdisk/: main.py
src/backup_file_tobaidu_netdisk/controller/: backup_service.py  conflict_resolver.py
src/backup_file_tobaidu_netdisk/dao/: models.py
temp_data/: scan1.json  scan2.json
test/: __init__.py  t1.py  t2.py  t4.py  t5.py
test/x/: t3.py
