[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backup-file-to-baidu-netdisk"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.48",
    "transitions>=0.9.3",
]
[tool.hatch.build]
# 指定包所在目录（默认会自动发现，但可显式声明）
packages = ["src/backup_file_to_baidu_netdisk"]
